<resources>
    <string name="app_name">SalaryShare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Search &#8230;</string>
    <string name="action_create">Create</string>
    <string name="action_add_location">Add Location</string>

    <string name="parse_app_id">g6kp61Rv922peH1cPawHxtBki7aBxwCaJizMIyDO</string>
    <string name="parse_client_key">W9TttP3Ht1PYnv91E77WXWEZ4EXFVG8HljUWCEbd</string>
    <string name="facebook_app_id">244235229112651</string>
    <string name="google_maps_api_key">AIzaSyBkKIqNnt37cyK-NU3bObAnPdDr1Br2eA8</string>


    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="title_activity_salary_post">SalaryPost</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_create_salary">CreateSalary</string>
    <string name="title_activity_salary_update">SalaryUpdate</string>
    <string name="title_activity_salary_list">SalaryListActivity</string>
    <string name="title_activity_add_new_salary">AddNewSalary</string>
    <string name="title_activity_update_salary">UpdateSalary</string>
    <string name="title_activity_view_salary">ViewSalary</string>
    <string name="title_activity_location">Select a Location</string>

    <string name="txt_position">Enter a position</string>
    <string name="txt_salary">Enter salary</string>
    <string name="txt_experience">Enter years of experience</string>
    <string name="choose_fieldname">Choose a fieldname</string>
    <string name="pos">Position</string>
    <string name="salary">Salary</string>
    <string name="exp">Experience</string>

    <string name="button_create">Add a new Salary</string>
    <string name="button_back">Back</string>



    <string name="subtitle">Subtitle</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Menu Title</string>
    <string name="page">Page</string>
    <string name="search">Search</string>
    <string name="menu1">Add new salary</string>
    <string name="menu2">Profile</string>
    <string name="menu3">Starred</string>
    <string name="menu4">Logout</string>

    <string name="map_search_hint">Search for places</string>
    <string name="feed_filter_new">New</string>
    <string name="feed_filter_distance">Distance</string>
    <string name="action_peek">Peek at another city</string>

</resources>
